# Wildcat

./: .dockerignore  .env.template  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  common-services.yml  deny.toml  deployment-configuration-local.yml  deployment-configuration.yml  docker-compose-clowder.yml  docker-compose-dev.yml  docker-compose-e2e.yml  docker-compose-local.yml  docker-compose.yml  enable_mint.sh  identity.sh  justfile  recipe.json  rustfmt.toml  test.sh  test_deactivate.sh  test_identity_detail.sh  test_info.sh  test_keyset.sh  test_keyset2.sh  wildcat.toml
crates/bcr-wdc-admin-aggregator/: Cargo.toml
crates/bcr-wdc-admin-aggregator/src/: admin.rs  error.rs  lib.rs  main.rs  types.rs
crates/bcr-wdc-balance-collector/: Cargo.toml
crates/bcr-wdc-balance-collector/src/: admin.rs  error.rs  lib.rs  main.rs  service.rs
crates/bcr-wdc-bff-wallet-service/: Cargo.toml  example.config.toml
crates/bcr-wdc-bff-wallet-service/src/: error.rs  keys.rs  lib.rs  main.rs  mint_client.rs  service.rs  web.rs
crates/bcr-wdc-core-service/: Cargo.toml
crates/bcr-wdc-core-service/.sqlx/: query-256ea90210127a9d93ffb013bf40b4a9e2ce2940ee57ec5a6cb2ad754d58bf30.json  query-2cdc88b0a7bc593fca65b4cc64ce18dd3b4eee0d4720e14fcfa34e71f5a9de10.json  query-32934148443b0014e9675f4f4b52c9fd9d5e9af1e541a56f25262bf6fa66eb3a.json  query-405e7ea8db0e5734b9436e0e63ce93323a4df9268747458153ac72a931ced590.json  query-406ed09acfc0a91cb582f062698083f56122bc4d4a7072a5f415ee6a68102fa8.json  query-456cad748368ffb9a661c20ac566ff15283ce95d8bca5fdaec9f6dbba0937717.json  query-4d8ff1d1b1e70bb23cac4763b0bd43d4c63bad068ee213705f687ec963debae8.json  query-5496a156494398d218805280f53b27ced31e751a80043782e8ea1ddbe1b1be8e.json  query-794a60d6b215268da420295e3c1b36375d2b5584055bd962025f9ca62a005262.json  query-7b51849aeefc1a8f82c6f2e9e9b661689066078c4ad69a20eef7beb618b2da87.json  query-95cbe5bf54e0f6aabeaf3d44ffaca04aab40312a75d4f9c1ab9c6687d0f6b3d1.json  query-a1d07b68850e543dd1826acac4dd925499b44fa1d70c933a3be7b5d9fb09981f.json  query-a881b4fa2302cb2c01ec9a2bd75fda183457667622f183e8e3892c578b6f1696.json  query-b052be0c916bf8a500e3cc2f90eaea0799c4e6087a68f5e7bc485e1e5df3a229.json  query-b1e9fb76a8cc01a91f9cfa9474a6396f4281595de9d9c1bd279dc6592c33cd91.json  query-b2eab8b6b820169050f4c99ac67206b67d311b43c1237155680154cef505c97d.json  query-bbe5a17c01ac10a51a7b2fe3fda45e1db41e0b6ec6f4c77d7a69bb65b52444ce.json  query-c81673631170c9d2e93d9d383201a083c03473c391df8eb41c86b385ba428859.json  query-d8bde6cde148a66b85f6ee2b0c85d8f343f1130a4a744f4450de6bec0f905cfc.json  query-df1595534fc8d4ad01ae97a0bdf5e2e3f750dde9a52496d4f67f0943a7396141.json  query-e335c7f08cc756623183f84945a5eb4035fd78660dfc2ccc17ac4062ad49c815.json  query-e5a859ae1aa6a9efe7437f793d031ce79b12550f7265582862c810777d042beb.json  query-e9d516f34ebc3f8300a1acb593f52f55a16d3729c8341cbd8fa1c11f2ff95656.json
crates/bcr-wdc-core-service/migrations/: 0001_create_signatures.sql  0002_create_proofs.sql  0006_create_keys.sql  0007_create_commitments.sql  0008_create_reserved_ys.sql
crates/bcr-wdc-core-service/src/: admin.rs  error.rs  lib.rs  main.rs  web.rs
crates/bcr-wdc-core-service/tests/: checkstate.rs  keys.rs  keyset_info.rs  list_keys.rs  list_keyset_info.rs  list_mintops.rs  restore.rs  swap.rs
crates/bcr-wdc-demo-faucet/: Cargo.toml
crates/bcr-wdc-demo-faucet/src/: lib.rs  main.rs
crates/bcr-wdc-e2e-tests/: Cargo.toml  config.toml
crates/bcr-wdc-e2e-tests/src/: clients.rs  endpoints.rs  main.rs  rest_client.rs  test_utils.rs
crates/bcr-wdc-e2e-tests/tests/: mint_ebill.rs
crates/bcr-wdc-ebill-client/: Cargo.toml
crates/bcr-wdc-ebill-client/src/: lib.rs
crates/bcr-wdc-ebill-client/tests/: bills.rs  contact.rs  identity.rs
crates/bcr-wdc-ebill-service/: Cargo.toml
crates/bcr-wdc-ebill-service/src/: bill.rs  contact.rs  error.rs  identity.rs  job.rs  lib.rs  main.rs  web.rs
crates/bcr-wdc-ebpp/: Cargo.toml
crates/bcr-wdc-ebpp-client/: Cargo.toml
crates/bcr-wdc-ebpp-client/src/: lib.rs
crates/bcr-wdc-ebpp/src/: admin.rs  bip39.rs  ebill.rs  error.rs  lib.rs  main.rs  onchain.rs  payment.rs  service.rs  web.rs
crates/bcr-wdc-eiou-client/: Cargo.toml
crates/bcr-wdc-eiou-client/src/: lib.rs
crates/bcr-wdc-eiou-service/: Cargo.toml
crates/bcr-wdc-eiou-service/src/: admin.rs  error.rs  lib.rs  main.rs
crates/bcr-wdc-key-client/: Cargo.toml
crates/bcr-wdc-key-client/src/: lib.rs
crates/bcr-wdc-key-client/tests/: keys.rs  keyset_info.rs  list_keys.rs  list_keyset_info.rs  pre_sign.rs  restore.rs
crates/bcr-wdc-key-service/: Cargo.toml
crates/bcr-wdc-key-service/src/: admin.rs  client.rs  clowder.rs  error.rs  factory.rs  lib.rs  main.rs  service.rs  web.rs
crates/bcr-wdc-key-service/tests/: keys.rs  keyset_info.rs  list_keys.rs  list_keyset_info.rs  list_mintops.rs  restore.rs
crates/bcr-wdc-keys/: Cargo.toml
crates/bcr-wdc-keys/src/: credit.rs  id.rs  lib.rs  persistence.rs
crates/bcr-wdc-quote-client/: Cargo.toml
crates/bcr-wdc-quote-client/src/: lib.rs
crates/bcr-wdc-quote-client/tests/: cancel.rs  enquire.rs  list.rs  lookup.rs
crates/bcr-wdc-quote-service/: Cargo.toml
crates/bcr-wdc-quote-service/.sqlx/: query-a7129fe64f174f9646809b0cbc1f95609381a8edd26d3abf3a113bfdfdec1a26.json  query-b00c8955d3a453e2170c091dbdf94dccfdd58fe8326b991e0ac5da05127d27f6.json  query-c2ef2ea5221345580b3d67f93bcaf73a28378a06d859c8e8a20cea1f43248ba9.json  query-eb5fba420c86bea0d03dc76e6d85f47b76c3477c78549e0fbee233a9961042ff.json  query-fde59ca4e113c23af3b5d88d8a2e138f6ad3cefda2a1eac0ff81659d1bc0acd1.json
crates/bcr-wdc-quote-service/migrations/: 0001_create_quotes.sql
crates/bcr-wdc-quote-service/src/: admin.rs  client.rs  ebill.rs  error.rs  keys.rs  (+9 more)
crates/bcr-wdc-swap-client/: Cargo.toml
crates/bcr-wdc-swap-service/: Cargo.toml
crates/bcr-wdc-treasury-client/: Cargo.toml
crates/bcr-wdc-treasury-service/: Cargo.toml
crates/bcr-wdc-utils/: Cargo.toml
crates/bcr-wdc-wallet-aggregator/: Cargo.toml  example.config.toml
crates/bcr-wdc-webapi/: Cargo.toml
crates/wildcat/: Cargo.toml
(+310 files in other folders)
