[workspace]
resolver = "2"


members = [
    "crates/bcr-wdc-webapi",
    "crates/bcr-wdc-utils",
    "crates/bcr-wdc-quote-service",
    "crates/bcr-wdc-swap-service", "crates/bcr-wdc-swap-client",
    "crates/bcr-wdc-key-service", "crates/bcr-wdc-key-client",
    "crates/bcr-wdc-treasury-service", "crates/bcr-wdc-treasury-client",
    "crates/bcr-wdc-wallet-aggregator",
    "crates/bcr-wdc-ebpp",
    "crates/bcr-wdc-ebill-service",
    "crates/bcr-wdc-e2e-tests"
]

[workspace.dependencies]
anyhow = {version = "1"}
async-trait = {version = "0.1"}
axum = {version = "0.8"}
axum-test = {version = "17"}
bcr-ebill-core = {git = "https://github.com/BitcreditProtocol/Bitcredit-Core.git", tag = "v0.3.0"}
bcr-wdc-key-client = { path = "./crates/bcr-wdc-key-client"}
bcr-wdc-key-service = { path = "./crates/bcr-wdc-key-service"}
bcr-wdc-swap-client = { path = "./crates/bcr-wdc-swap-client"}
bcr-wdc-swap-service = { path = "./crates/bcr-wdc-swap-service"}
bcr-wdc-treasury-client = { path = "./crates/bcr-wdc-treasury-client"}
bcr-wdc-utils = {path = "./crates/bcr-wdc-utils"}
bcr-wdc-webapi = {path = "./crates/bcr-wdc-webapi"}
bdk_wallet = {version = "1.1"}
bip39 = {version = "2"}
bitcoin = {version = "0.32"}
borsh = {version = "1.5"}
cashu = {version = "0.9", default-features = false}
cdk = {version = "0.9"}
cdk-common = {version = "0.9"}
cdk-payment-processor = {version = "0.9", default-features = false}
cdk-redb = {version = "0.9"}
chrono = {version = "0.4"}
config = {version = "0.15"}
futures = {version = "0.3"}
itertools = {version = "0.14"}
mockall = {version = "0.13"}
rand = {version = "0.8"}
reqwest = { version = "0.12"}
rust_decimal = {version = "1"}
secp256k1 = {version = "0.29"}
serde = {version = "1"}
serde_json = {version = "1"}
strum = {version = "0"}
surrealdb = {version = "2.2"}
thiserror = {version = "2"}
tokio = {version = "1"}
tokio-util = {version = "0.7"}
tracing = {version = "0.1"}
tracing-log = {version = "0.2"}
tracing-subscriber = {version = "0.3"}
utoipa = {version = "5"}
utoipa-swagger-ui = {version = "9"}
uuid = {version = "1"}
url = {version = "2.5.4"}
