[workspace.package]
version = "0.5.0-alpha"
edition = "2021"
license = "MIT"

[workspace]
resolver = "2"

members = [
    "crates/bcr-wdc-admin-aggregator",
    "crates/bcr-wdc-balance-collector",
    "crates/bcr-wdc-e2e-tests",
    "crates/bcr-wdc-ebpp", "crates/bcr-wdc-ebpp-client",
    "crates/bcr-wdc-eiou-service", "crates/bcr-wdc-eiou-client",
    "crates/bcr-wdc-key-service",
    "crates/bcr-wdc-quote-service",
    "crates/bcr-wdc-swap-service",
    "crates/bcr-wdc-treasury-service", "crates/bcr-wdc-treasury-client",
    "crates/bcr-wdc-utils",
    "crates/bcr-wdc-wallet-aggregator",
    "crates/bcr-wdc-webapi",
]

[workspace.dependencies]
anyhow = {version = "1"}
async-trait = {version = "0.1"}
axum = {version = "0.8"}
axum-test = {version = "17"}
bcr-common = {git = "https://github.com/BitcreditProtocol/bcr-common.git", tag = "v0.6.0"}
bcr-ebill-core = {git = "https://github.com/BitcreditProtocol/Bitcredit-Core.git", tag = "v0.5.0"}
bcr-wdc-ebpp-client = {path = "./crates/bcr-wdc-ebpp-client"}
bcr-wdc-eiou-client = {path = "./crates/bcr-wdc-eiou-client"}
bcr-wdc-key-service = {path = "./crates/bcr-wdc-key-service"}
bcr-wdc-quote-service = {path = "./crates/bcr-wdc-quote-service"}
bcr-wdc-swap-service = {path = "./crates/bcr-wdc-swap-service"}
bcr-wdc-treasury-client = {path = "./crates/bcr-wdc-treasury-client"}
bcr-wdc-utils = {path = "./crates/bcr-wdc-utils"}
bcr-wdc-webapi = {path = "./crates/bcr-wdc-webapi"}
bdk_core = {version = "0.6"}
bdk_electrum = {version = "0.23"}
bdk_wallet = {version = "2.3"}
bip39 = {version = "2"}
bitcoin = {version = "0.32"}
borsh = {version = "1.5"}
built = {version = "0.8"}
cashu = {version = "=0.13.1", default-features = false}
cdk = {version = "=0.13.1", default-features = false}
cdk-common = {version = "=0.13.1"}
cdk-payment-processor = {version = "=0.13.1", default-features = false}
cdk-redb = {version = "=0.13.1"}
chrono = {version = "0.4"}
clwdr-client = {git = "https://github.com/BitcreditProtocol/Clowder.git", rev = "7c5f45bcf5ebf31b93cf62bf9a65194d91b1c7be"}
config = {version = "0.15"}
futures = {version = "0.3"}
itertools = {version = "0.14"}
mime = {version  = "0.3"}
mockall = {version = "0.13"}
rand = {version = "0.8"}
reqwest = {version = "0.12"}
secp256k1 = {version = "0.29"}
serde = {version = "1"}
serde_json = {version = "1"}
strum = {version = "0.27"}
surrealdb = {version = "2.2"}
thiserror = {version = "2"}
tokio = {version = "1"}
tokio-util = {version = "0.7"}
tracing = {version = "0.1"}
tracing-log = {version = "0.2"}
tracing-subscriber = {version = "0.3"}
url = {version = "2.5.4"}
utoipa = {version = "5"}
utoipa-swagger-ui = {version = "9"}
uuid = {version = "1"}

# due to https://github.com/rust-lang/cargo/issues/5478 we need to use a different source
[patch."https://github.com/BitcreditProtocol/bcr-common.git"]
bcr-common = {path = "./bcr-common"}
