[package]
name = "bcr-wdc-admin-aggregator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = {workspace = true, features = ["macros"]}
bcr-common = {workspace = true, features = ["clwdr-client"]}
bcr-wdc-utils = {workspace = true}
chrono = {workspace = true}
config = {workspace = true}
futures = {workspace = true}
secp256k1 = {workspace = true}
serde  = {workspace = true}
thiserror.workspace = true
tokio = {workspace = true, features = ["signal"]}
tracing = {workspace = true, features = ["log"]}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
utoipa = {workspace = true, features = ["axum_extras", "yaml"]}
utoipa-swagger-ui = {workspace = true, features = ["axum"]}
uuid.workspace = true
