[package]
name = "bcr-wdc-balance-collector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bcr-wdc-eiou-client = {workspace = true}
bcr-wdc-ebpp-client = {workspace = true}
bcr-wdc-treasury-client = {workspace = true}
bcr-wdc-webapi = {workspace = true}
bdk_wallet = {workspace = true}
chrono = {workspace = true}
config = {workspace = true}
serde  = {workspace = true}
surrealdb = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true, features = ["signal"]}
tracing = {workspace = true, features = ["log"]}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
