[package]
name = "bcr-wdc-balance-collector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
bcr-wdc-eiou-client = {workspace = true, features = ["authorized"]}
bcr-wdc-ebpp-client = {workspace = true, features = ["authorized"]}
bcr-wdc-treasury-client = {workspace = true, features = ["authorized"]}
bcr-wdc-webapi = {workspace = true}
bdk_wallet = {workspace = true}
cashu = {workspace = true}
chrono = {workspace = true}
config = {workspace = true}
serde  = {workspace = true}
surrealdb = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true, features = ["signal"]}
tracing = {workspace = true, features = ["log"]}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
utoipa = {workspace = true, features = ["axum_extras"]}
utoipa-swagger-ui = {workspace = true, features = ["axum"]}

[dev-dependencies]
surrealdb = {workspace = true, features = ["kv-mem"]}
