[package]
name = "bcr-wdc-bff-wallet-service"
version = "0.1.0"
edition = "2024"

[features]
test-utils = ["axum-test"]

[dependencies]
async-trait.workspace = true
axum-test = {workspace = true, optional = true}
axum.workspace = true
bcr-wdc-key-client = { path = "../bcr-wdc-key-client" }
cashu.workspace = true
cdk = {workspace = true, features = ["wallet"]}
config = {workspace = true}
env_logger = {workspace = true}
log.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.2", features = ["cors"] }
utoipa = {workspace = true, features = ["axum_extras"]}
utoipa-swagger-ui.workspace = true

[dev-dependencies]
mockall.workspace = true
