[package]
name = "bcr-wdc-core-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-utils = ["axum-test", "bcr-wdc-utils/test-utils", "rand"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
axum-test = {workspace = true, optional = true}
bcr-common = {workspace = true, features = ["authorized"]}
bcr-wdc-utils = {workspace = true}
bip39 = {workspace = true}
bitcoin.workspace = true
chrono.workspace = true
clwdr-client = {workspace = true}
config = {workspace = true}
futures.workspace = true
rand = {workspace = true, optional = true}
reqwest = {workspace = true}
secp256k1 = {workspace = true, features = ["global-context"]}
serde.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["signal"]}
tracing = {workspace = true}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
uuid.workspace = true

[dev-dependencies]
bcr-common = {workspace = true, features = ["test-utils"]}
bcr-wdc-core-service = {workspace = true, features = ["test-utils"]}
mockall = {workspace = true}
surrealdb = {workspace = true, features = ["kv-mem"]}
