[package]
name = "bcr-wdc-e2e-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = {workspace = true}
bcr-common = {workspace = true}
bcr-wdc-utils = {workspace = true, features = ["test-utils"] }
bcr-wdc-webapi = {workspace = true, features = ["test-utils"]}
bitcoin.workspace = true
chrono.workspace = true
config = {workspace = true}
reqwest = {workspace = true, features = ["json"]}
serde.workspace = true
tokio.workspace = true
tracing = {workspace = true }
tracing-subscriber = {workspace = true, features = ["serde"]}
uuid.workspace = true
