[package]
name = "bcr-wdc-ebill-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = {workspace = true, features = ["json"]}
thiserror.workspace = true
bcr-wdc-webapi.workspace = true
bip39.workspace = true

[dev-dependencies]
bcr-wdc-ebill-service = {workspace = true, features = ["test-utils"]}
tokio.workspace = true
