[package]
name = "bcr-wdc-ebill-service"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
test-utils = ["axum-test", "mockall", "async-broadcast", "bcr-ebill-core"]

[dependencies]
axum = {workspace = true, features = ["macros"]}
axum-test = {workspace = true, optional = true}
mockall = {workspace = true, optional = true}
bcr-ebill-core = {workspace = true, optional = true}
bcr-ebill-transport = {git = "https://github.com/BitcreditProtocol/Bitcredit-Core.git", tag = "v0.3.12"}
bcr-ebill-api = {git = "https://github.com/BitcreditProtocol/Bitcredit-Core.git", tag = "v0.3.12"}
bcr-wdc-webapi.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["signal", "time"]}
tracing = {workspace = true, features = ["log"]}
tracing-log = {workspace = true}
bitcoin = {workspace = true, features = ["serde"]}
tracing-subscriber = {workspace = true, features = ["serde"]}
url = {workspace = true, features = ["serde"]}
bip39 = {workspace = true, features = ["serde"]}
serde_repr.workspace = true 
rustls = "0.23"
async-broadcast = { version = "0.7.2", optional = true }
async-trait.workspace = true
