[package]
name = "bcr-wdc-ebpp-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
authorized = ["bcr-wdc-utils/auth"]

[dependencies]
bcr-wdc-utils = {workspace = true}
bcr-wdc-webapi = {workspace = true}
bdk_wallet = {workspace = true}
chrono.workspace = true
reqwest = {workspace = true, features = ["json"]}
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true
