[package]
name = "bcr-wdc-ebpp-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bcr-common = {workspace = true}
bcr-wdc-utils = {workspace = true}
bdk_wallet = {workspace = true}
chrono.workspace = true
reqwest = {workspace = true, features = ["json"]}
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true
