[package]
name = "bcr-wdc-ebpp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = {workspace = true}
async-stream = {version = "0.3"}
async-trait = { workspace = true}
axum = { workspace = true, features = ["macros"]}
bcr-wdc-utils = {workspace = true}
bcr-wdc-webapi = {workspace = true}
bcr-wdc-ebill-client = {workspace = true}
bdk_core = {workspace = true}
bdk_electrum = {workspace = true}
bdk_wallet = {workspace = true, features = ["rusqlite", "keys-bip39"]}
bip21 = {version = "0.5"}
bip39 = {workspace = true}
cashu = {workspace = true}
cdk-common = {workspace = true}
cdk-payment-processor = {workspace = true, features = ["fake"]}
chrono = {workspace = true}
config = {workspace = true}
electrum-client = {version = "0.23"}
futures = {workspace = true}
rand = {workspace = true}
secp256k1 = {workspace = true, features = ["global-context"]}
serde = {workspace = true}
serde_json = { workspace = true}
serde_with = {version = "3", default-features = false, features = ["chrono"]}
surrealdb = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tokio-util = {workspace = true}
tracing = {workspace = true }
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true, features = ["serde"]}
utoipa = { workspace = true}
utoipa-swagger-ui = {workspace = true, features = ["axum"]}
uuid = {workspace = true}

[dev-dependencies]
mockall = {workspace = true}
secp256k1 = {workspace = true, features = ["global-context"]}
surrealdb = {workspace = true, features = ["kv-mem"]}
tempfile = {version = "3"}
