[package]
name = "bcr-wdc-eiou-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
authorized = []

[dependencies]
bcr-wdc-utils = {workspace = true}
bcr-wdc-webapi = {workspace = true}
reqwest = {workspace = true, features = ["json"]}
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true
