[package]
name = "bcr-wdc-key-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
test-utils = ["bcr-wdc-key-service", "bcr-wdc-utils", "bcr-wdc-key-service/test-utils"]

[dependencies]
bcr-wdc-key-service = {workspace = true, optional = true}
bcr-wdc-utils = {workspace = true, features = ["test-utils"], optional = true}
bcr-wdc-webapi = {workspace = true}
cashu.workspace = true
chrono.workspace = true
reqwest = {workspace = true, features = ["json"]}
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
bcr-wdc-key-service = {workspace = true, features = ["test-utils"]}
bcr-wdc-utils = {workspace = true, features = ["test-utils"]}
tokio.workspace = true
