[package]
name = "bcr-wdc-key-service"
version = "0.1.0"
edition = "2021"

[features]
test-utils = ["axum-test"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-test = {workspace = true, optional = true}
bcr-wdc-keys = { path = "../bcr-wdc-keys"}
bcr-wdc-webapi = { path = "../bcr-wdc-webapi"}
bitcoin.workspace = true
cashu.workspace = true
chrono.workspace = true
config = {version = "0.15"}
env_logger = {version = "0.11"}
futures.workspace = true
log.workspace = true
serde.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa = {workspace = true, features = ["axum_extras"]}
utoipa-swagger-ui.workspace = true
uuid.workspace = true


[dev-dependencies]
mockall.workspace = true
bip39 = {version = "2"}
