[package]
name = "bcr-wdc-key-service"
version = "0.1.0"
edition = "2021"

[features]
test-utils = ["axum-test"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
axum-test = {workspace = true, optional = true}
bcr-wdc-utils = { path = "../bcr-wdc-utils"}
bcr-wdc-webapi = { path = "../bcr-wdc-webapi"}
bitcoin.workspace = true
cashu = {workspace = true, features = ["swagger"]}
cdk-common = {workspace = true}
chrono.workspace = true
config = {version = "0.15"}
env_logger = {workspace = true}
futures.workspace = true
log = {workspace = true, features = ["serde"]}
serde  = {workspace = true}
surrealdb.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["signal"]}
utoipa = {workspace = true, features = ["axum_extras"]}
utoipa-swagger-ui = {workspace = true, features = ["axum"]}
uuid.workspace = true


[dev-dependencies]
bip39 = {version = "2"}
mockall.workspace = true
