[package]
name = "bcr-wdc-key-service"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
test-utils = ["axum-test"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
axum-test = {workspace = true, optional = true}
bcr-wdc-utils = {workspace = true}
bcr-wdc-webapi = {workspace = true}
bitcoin.workspace = true
cashu = {workspace = true, features = ["swagger"]}
cdk-common = {workspace = true}
chrono.workspace = true
config = {workspace = true}
env_logger = {workspace = true}
futures.workspace = true
itertools = {workspace = true}
log = {workspace = true, features = ["serde"]}
secp256k1 = {workspace = true, features = ["global-context"]}
serde  = {workspace = true}
surrealdb.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["signal"]}
utoipa = {workspace = true, features = ["axum_extras"]}
utoipa-swagger-ui = {workspace = true, features = ["axum"]}
uuid.workspace = true


[dev-dependencies]
bip39 = {workspace = true}
mockall.workspace = true
surrealdb = {workspace = true, features = ["kv-mem"]}
