[package]
name = "bcr-wdc-keys"
version = "0.1.0"
edition = "2021"


[features]
test-utils = ["mockall", "once_cell", "rand"]
persistence = ["serde", "surrealdb"]


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bitcoin.workspace = true
cashu.workspace = true
chrono.workspace = true
mockall = { workspace = true, optional = true}
once_cell = {version = "1.20", optional = true}
rand = {workspace = true, optional  = true}
thiserror.workspace = true
uuid.workspace = true

serde = {workspace = true, optional = true}
surrealdb = {workspace = true, optional = true}
