[package]
name = "bcr-wdc-quote-service"
version = "0.1.0"
edition = "2021"
license = "MIT"


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
bcr-ebill-core.workspace = true
bcr-wdc-key-client = {workspace = true}
bcr-wdc-utils = {workspace = true}
bcr-wdc-treasury-client = {workspace = true}
bcr-wdc-webapi = {workspace = true}
bitcoin.workspace = true
borsh.workspace = true
cashu = {workspace = true, features = ["swagger"]}
chrono.workspace = true
config.workspace = true
env_logger.workspace = true
futures.workspace = true
log = {workspace = true, features = ["serde"]}
serde.workspace = true
strum = {workspace = true, features = ["derive"]}
surrealdb.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["signal"]}
utoipa = {workspace = true, features = ["axum_extras", "yaml"]}
utoipa-swagger-ui = {workspace = true, features = ["axum"]}
uuid.workspace = true

[dev-dependencies]
bcr-wdc-utils = { workspace = true, features = ["test-utils"] }
bip39 = {workspace = true}
mockall.workspace = true
rand.workspace = true
