[package]
name = "bcr-wdc-quote-service"
version.workspace = true
edition.workspace = true
license.workspace = true


[features]
test-utils = ["axum-test"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
axum-test = {workspace = true, optional = true}
bcr-ebill-core.workspace = true
bcr-wdc-key-client = {workspace = true}
bcr-wdc-utils = {workspace = true}
bcr-wdc-treasury-client = {workspace = true}
bcr-wdc-webapi = {workspace = true}
bitcoin.workspace = true
borsh.workspace = true
cashu = {workspace = true, features = ["swagger"]}
chrono.workspace = true
config.workspace = true
futures.workspace = true
serde.workspace = true
strum = {workspace = true, features = ["derive"]}
surrealdb.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["signal"]}
tracing = {workspace = true }
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
utoipa = {workspace = true, features = ["axum_extras", "yaml"]}
utoipa-swagger-ui = {workspace = true, features = ["axum"]}
uuid.workspace = true

[dev-dependencies]
bcr-wdc-utils = { workspace = true, features = ["test-utils"] }
bip39 = {workspace = true}
mockall.workspace = true
rand.workspace = true
surrealdb = {workspace = true, features = ["kv-mem"]}
