[package]
name = "bcr-wdc-quote-service"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
bcr-common = {workspace = true, features = ["clwdr-client"]}
bcr-ebill-core.workspace = true
bcr-wdc-utils = {workspace = true}
bitcoin.workspace = true
chrono.workspace = true
config.workspace = true
reqwest = {workspace = true}
serde.workspace = true
serde_json.workspace = true
sqlx = {workspace = true, features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"]}
strum = {workspace = true, features = ["derive"]}
surrealdb.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["signal"]}
tracing = {workspace = true }
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
url = {workspace = true, features = ["serde"]}
uuid.workspace = true

[dev-dependencies]
arbitrary = {version = "1.0"}
bcr-wdc-utils = { workspace = true, features = ["test-utils"] }
bip39 = {workspace = true}
bitcoin = {workspace = true, features = ["arbitrary"]}
mockall.workspace = true
rand.workspace = true
surrealdb = {workspace = true, features = ["kv-mem"]}
